Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 19, 2023


Code cleanup (enemy game object instantation).

Holding down Shift key while pressing Tab key will reverse 
selection direction in the mission picker screen. It will 
also navigate to the previous page in the Details screen.

Pod intersection timer message displayed.

"Smart bomb awarded" message appears when a smart bomb is gained.

"All mission targets destroyed" message now a permanent message 
instead of a normal message, so it remains displayed 
until the player exits the mission.

User messages now shown using GMessageMediator instead of 
directly invoking widget methods.

More code cleanup, "enemy" --> "gameobject", AdjustAbductionStates 
now HumanStates, etc.

Adjusted human animation to closer match stride to walking speed.

Adjusted radar panel background, organized material assets better.

Added dark green interlace background to radar panel.

Customized collision force for spacehum, swarmer, munchie, 
guppy, hunter, and reformer part.

Changed radar's visible arena section lines to use 
arcade style thick rectangle sections.

Added boolean RaderIsPlayerCentric pref which, if false, 
arcade matches the radar centricity where the edges of 
the visible arena stay fixed in position instead of 
the player ship. Technically, a radar would always 
have the ship centered, and setting the pref to true 
will allow that.

Changed color of play area section dividers from gray to dark red.
Also thickened the stats-radar divider a bit to look closer 
in linewidth to the horizontal divider.

Added UTextBlock "TopMessage" to main arena widget, 
which now shows the "game paused" message instead of 
using the message log. It will also show the planned
"pod intersection" message.

Added help page for humans.

Changed human texture to animated, more detailed version.
