@@ -139,7 +139,6 @@ class DEFCON_API UDefconPlayViewBase : public UDefconViewBase
 	float      m_fRadarFritzed      = 0.0f;
 	float      FadeAge              = 0.0f;
 	int32      NumPlayerPassengers  = 0;
-	int32      m_nFlashScreen       = 0;//todo: is this needed?
 	
 	bool 	   bFinishActivating    = false;
 	bool       bMissionDoneMsgShown = false;
